--- a/src/style.css
+++ b/src/style.css
@@ -68,17 +68,109 @@ footer {
 main {
   height: 100%;
   width: 100%;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-  /* background: url(./images/bg5.jpg) no-repeat center center fixed;
-  background-size: cover; */
-}
-
-.display-none {
-  display: none;
-}
-
-.display-flex {
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-box {
+  height: 85%;
+  width: 85%;
+  /* background-color: rgba(0, 0, 0, 0.392); */
+  color: white;
+  border-radius: 30px;
+  border: none;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.round-flag-icon {
+  height: 40px;
+  width: 40px;
+}
+
+.main-grid {
+  height: 100%;
+  width: 100%;
+  display: grid;
+
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+}
+
+.top-box,
+.in-grid {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border-radius: 20px;
+  border: none;
+  padding: 10px;
+  text-align: center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.city-info {
+  grid-column-start: 1;
+  grid-column-end: 6;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  gap: 10px;
+
+  /* justify-content: flex-start;
+  align-items: flex-start; */
+  flex-direction: column;
+  padding: 20px;
+}
+
+.city {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.city-name {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.date-info {
+  grid-column-start: 6;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.sun-info {
+  grid-column-start: 6;
+  grid-column-end: 9;
+  grid-row-start: 2;
+  grid-row-end: 3;
+
+  gap: 20px;
+  flex-direction: column;
+}
+
+.weather-data {
+  font-size: 0.7rem;
+  grid-row-start: 3;
+  grid-row-end: 5;
+
+  flex-direction: column;
+  /* justify-content: flex-start; */
+  /* gap: 10px; */
+}
+
+p {
+  margin: 0;
+}
+
+.no-bg {
+  background-color: unset;
 }
