--- a/src/style.css
+++ b/src/style.css
@@ -188,7 +188,7 @@ main {
 }
 
 .city-name {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
@@ -244,6 +244,9 @@ main {
   align-items: center;
   font-size: 0.8rem;
   justify-content: flex-start;
+  gap: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .current-feels-like {
@@ -256,6 +259,13 @@ main {
   align-items: center;
   font-size: 0.8rem;
   justify-content: flex-start;
+  gap: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.small-icon {
+  height: 30px;
 }
 
 .date-info {
@@ -333,7 +343,7 @@ p {
 
 .sunset,
 .sunrise {
-  gap: 40px;
+  justify-content: space-around;
 }
 
 .sun-heading {
